# PacketMind-AI

./: AI_USAGE_GUIDE.md  AUTO_PROXY_GUIDE.md  FILTER_FIX_SUMMARY.md  README.md  index.html  package.json  pnpm-lock.yaml  test_requests.html  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_analyzer.rs  ai_response.rs  commands.rs  lib.rs  main.rs  proxy.rs
src/components/: AIAnalysis.tsx
