[package]
name = "packetmind-ai"
version = "0.1.0"
description = "PacketMind AI - HTTP(S) Traffic Capture Tool"
authors = ["chenlong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "packetmind_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
base64 = "0.21"
urlencoding = "2.1"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"

